m2_flats/logs/dag_id=flats/run_id=manual__2024-09-22T10_15_18.685043+00_00/task_id=create_fact_table/attempt=1.log
[2024-09-22T10:15:39.016+0000] {taskinstance.py:1157} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: flats.create_fact_table manual__2024-09-22T10:15:18.685043+00:00 [queued]>
[2024-09-22T10:15:39.028+0000] {taskinstance.py:1157} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: flats.create_fact_table manual__2024-09-22T10:15:18.685043+00:00 [queued]>
[2024-09-22T10:15:39.029+0000] {taskinstance.py:1359} INFO - Starting attempt 1 of 1
[2024-09-22T10:15:39.046+0000] {taskinstance.py:1380} INFO - Executing <Task(PostgresOperator): create_fact_table> on 2024-09-22 10:15:18.685043+00:00
[2024-09-22T10:15:39.056+0000] {standard_task_runner.py:57} INFO - Started process 856 to run task
[2024-09-22T10:15:39.061+0000] {standard_task_runner.py:84} INFO - Running: ['***', 'tasks', 'run', 'flats', 'create_fact_table', 'manual__2024-09-22T10:15:18.685043+00:00', '--job-id', '1023', '--raw', '--subdir', 'DAGS_FOLDER/flats.py', '--cfg-path', '/tmp/tmplfgd_u55']
[2024-09-22T10:15:39.064+0000] {standard_task_runner.py:85} INFO - Job 1023: Subtask create_fact_table
[2024-09-22T10:15:39.167+0000] {task_command.py:415} INFO - Running <TaskInstance: flats.create_fact_table manual__2024-09-22T10:15:18.685043+00:00 [running]> on host 1646e3dc8472
[2024-09-22T10:15:39.255+0000] {taskinstance.py:1660} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='flats' AIRFLOW_CTX_TASK_ID='create_fact_table' AIRFLOW_CTX_EXECUTION_DATE='2024-09-22T10:15:18.685043+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-09-22T10:15:18.685043+00:00'
[2024-09-22T10:15:39.258+0000] {sql.py:274} INFO - Executing: 
    CREATE TABLE IF NOT EXISTS fact_flat (
        metro_id SERIAL,
        text_id SERIAL,
        seller_id SERIAL,
        advt_id SERIAL,
        building_id SERIAL,
        flat_params_id SERIAL,
        district_id SERIAL,
        geo_id SERIAL,
        price DECIMAL
        processed_dttm DATE NOT NULL,
        source VARCHAR(20) NOT NULL
    )
[2024-09-22T10:15:39.267+0000] {base.py:73} INFO - Using connection ID 'postgres_conn' for task execution.
[2024-09-22T10:15:39.581+0000] {base.py:73} INFO - Using connection ID 'postgres_conn' for task execution.
[2024-09-22T10:15:40.345+0000] {sql.py:418} INFO - Running statement: 
    CREATE TABLE IF NOT EXISTS fact_flat (
        metro_id SERIAL,
        text_id SERIAL,
        seller_id SERIAL,
        advt_id SERIAL,
        building_id SERIAL,
        flat_params_id SERIAL,
        district_id SERIAL,
        geo_id SERIAL,
        price DECIMAL
        processed_dttm DATE NOT NULL,
        source VARCHAR(20) NOT NULL
    ), parameters: None
[2024-09-22T10:15:40.438+0000] {taskinstance.py:1935} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 280, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 392, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 423, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "processed_dttm"
LINE 12:         processed_dttm DATE NOT NULL,
                 ^

[2024-09-22T10:15:40.452+0000] {taskinstance.py:1398} INFO - Marking task as FAILED. dag_id=flats, task_id=create_fact_table, execution_date=20240922T101518, start_date=20240922T101539, end_date=20240922T101540
[2024-09-22T10:15:40.467+0000] {standard_task_runner.py:104} ERROR - Failed to execute job 1023 for task create_fact_table (syntax error at or near "processed_dttm"
LINE 12:         processed_dttm DATE NOT NULL,
                 ^
; 856)
[2024-09-22T10:15:40.510+0000] {local_task_job_runner.py:228} INFO - Task exited with return code 1
[2024-09-22T10:15:40.536+0000] {taskinstance.py:2776} INFO - 0 downstream tasks scheduled from follow-on schedule check
